@@ -1,3 +1,6 @@
+12/14/13:
+	Put page download code into its own function
+
 12/12/13: Released as version 1.2
 	Exit after user-defined number of 404 pages.
 	Optionally check if pages are actually from IMDB
